Extract "UTF-8" as a constant in SdkConstants
Change-Id: Ie4b750bf0d43cf3cd6d296f42ee2d94b5018429d